--- a/pedidos/templates/registro_datos.html
+++ b/pedidos/templates/registro_datos.html
@@ -16,9 +16,9 @@
     {% elif reservacion %}
     <a href="{% url 'reser_hora' %}">Volver</a>
     {% endif %}
+    
     <h1>Datos del cliente</h1>
-    <br><br>
-    <h3>{{ nombre }}'s</h3>
+    <br>
     {% if error %}
     <<div
         class="alert alert-danger"
@@ -30,14 +30,14 @@
     
     <h5>Registre sus datos para procesar el pedido</h5>
     <div class="alert alert-secondary" role="alert">
-        Si inicias sesión, tus datos se cargarán automáticamente sin necesidad de introducirlos en cada pedido.
+        Si inicias sesión, tus datos se cargarán automáticamente sin necesidad de introducirlos en cada pedido. Además, podras observar tus pedidos realizados.
         <a href="{% url 'login' %}">Iniciar sesión</a>
       </div>
       
     <form method="post">
         {% csrf_token %}
         {{ form }}
-        {% if ubicacion %}
+        {% if ubicacion and not type %}
         <br>
         <div class="card">
             <div class="body">
