--- a/pedidos/templates/reser_hora.html
+++ b/pedidos/templates/reser_hora.html
@@ -32,7 +32,7 @@
             {% endif %}
         </div>
         <br><br>
-
+        <h2>Reservaciones</h2>
         <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
             <symbol id="info-fill" viewBox="0 0 16 16">
               <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
@@ -64,6 +64,7 @@
         </select>
        
         <div id="mesasContainer">
+            <br><P><strong>Seleccione la fecha de su reservacion</strong></P>
             {% for fecha,mesas in mesas.items %}
                 <input type="radio" class="btn-check" {% if fecha == date %} checked {% endif %}  autocomplete="off" name="fecha" value="{{ fecha }}+{{ mesas }}" id="fecha_{{ forloop.counter }}" required>
                 <label class="btn" for="fecha_{{ forloop.counter }}">
@@ -72,9 +73,8 @@
                 
             {% endfor %}
         </div>
-    <br>
         {% if horas %}
-        <h6>Hora</h6>
+        <br><P><strong>Seleccione la hora de su reservacion</strong></P>
         {% for hora in horas %}
             <input type="radio" class="btn-check"  autocomplete="off" name="hora" value="{{ hora }}" id="hora_{{ forloop.counter }}" required>
             <label class="btn" for="hora_{{ forloop.counter }}">{{ hora }}</label>
@@ -82,9 +82,11 @@
         {% else %}
         <p>Error al traer horas</p>
         {% endif %}
+        <br>
+        <input type="submit" value="Confirmar">
     </div>
     <br>
-    <input type="submit" value="Confirmar">
+    
 </form>
 </body>
 </html>
