--- a/principal/templates/delivery.html
+++ b/principal/templates/delivery.html
@@ -32,7 +32,8 @@
                 <a href="{% url 'presentacion_two' id %}"><button type="button" class="btn btn-outline-primary">Reservaciones</button></a>
             {% endif %}
         </div>
-{% if not error %}
+{% if not error %}<br>
+<h1>Delivery</h1>
         <br>
         <div class="card">
             <div class="body">
@@ -53,9 +54,9 @@
                             <div class="card">
                                 <img src="..." class="card-img-top" alt="{{ item.comida }}">
                                 <div class="card-body">
-                                    <h5 class="card-title">{{ item.comida }}</h5>
+                                    <h4 class="card-title">{{ item.comida }}</h4>
                                     <div class="ingredients">
-                                        <h2>Ingredientes:</h2>
+                                        <h6>Ingredientes:</h6>
                                         <ul>
                                         {% for ingrediente in item.codigo|primeros_5 %}
                                             <li>{{ ingrediente }}</li>
@@ -85,7 +86,7 @@
                 <h4 class="alert-heading">Error</h4>
                 <hr />
                 <p class="mb-0">{{ error }}</p>
-                <a href="{% url 'ubicacion' %}">Cambiar ubicacion</a>
+                <a href="{% url 'ubicacion' id %}">Cambiar ubicacion</a>
             </div>
             {% endif %}
         {% endif %}
