--- a/user_r/templates/paypal.html
+++ b/user_r/templates/paypal.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ nombre }}</title>  
+    <title>Paypal {{ nombre }}</title>  
 </head>
 <body>
     <h1>{{ nombre }}</h1>
